Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -12,6 +12,18 @@
 
 p<>.Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для мониторинга процессов в целом. Однако системному администратору, возможно, придется пойти еще дальше. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и прекрасные терминальные эмуляторы, мультиплексоры по-прежнему сохраняют некоторые интересные, мощные функции для продвинутого системного администратора.
 
+1. List item one.
++
+List item one continued with a second paragraph followed by an
+Indented block.
++
+.................
+$ ls *.sh
+$ mv *.sh ~/tmp
+.................
++
+List item continued with a third paragraph.
+
 [] dfdf
 [] dfdfdf
 [x] fdfdf
