Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -15,16 +15,16 @@ p<>.Инструменты и утилиты, рассмотренные в пр
 1. List item one.
 List item one continued with a second paragraph followed by an
 Indented block.
-.................
+.
 $ ls *.sh
 $ mv *.sh ~/tmp
-.................
+.
 
 List item continued with a third paragraph.
 
-[] dfdf
-[] dfdfdf
-[x] fdfdf
+- [] dfdf
+- [] dfdfdf
+- [x] fdfdf
 
 # Особенности терминальных мультиплексоров
 
