Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -10,11 +10,24 @@
 
 # Введение
 
-p<>.Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для мониторинга процессов в целом. Однако системному администратору, возможно, придется пойти еще дальше. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и прекрасные терминальные эмуляторы, мультиплексоры по-прежнему сохраняют некоторые интересные, мощные функции для продвинутого системного администратора.
+Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для мониторинга процессов в целом. Однако системному администратору, возможно, придется пойти еще дальше. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и прекрасные терминальные эмуляторы, мультиплексоры по-прежнему сохраняют некоторые интересные, мощные функции для продвинутого системного администратора.
 
 - [ ] dfdf
 - [ ] dfdfdf
 - [x] fdfdf
+
+Markdown
+: Інструмент перетворення тексту в HTML
+
+Філософія Markdown
+: Мова `Markdown` покликана бути такою ж простою для читання та простотою для написання, наскільки це можливо
+
+StackEdit
+: Редактор `Markdown` в браузері
+
+Автори
+: Джон Грубер
+: Бенуа Швеблін
 
 # Особенности терминальных мультиплексоров
 
