Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -29,6 +29,8 @@ StackEdit
 : Джон Грубер
 : Бенуа Швеблін
 
+<kbd>Ctrl</kbd>+<kbd>C</kbd>
+
 # Особенности терминальных мультиплексоров
 
 В электронике мультиплексор (или `mux`) - это устройство, которое позволяет подключать несколько входов к одному выходу. Таким образом, оконечный мультиплексор дает нам возможность переключаться между различными входами по мере необходимости. Хотя это и не совсем то же самое, но экран и `tmux` имеют ряд общих функций: 
