Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -16,19 +16,6 @@
 - [ ] dfdfdf
 - [x] fdfdf
 
-Markdown  
-: Інструмент перетворення тексту в HTML
-
-Філософія Markdown  
-: Мова `Markdown` покликана бути такою ж простою для читання та простотою для написання, наскільки це можливо
-
-StackEdit  
-: Редактор `Markdown` в браузері
-
-Автори  
-: Джон Грубер
-: Бенуа Швеблін
-
 <kbd>Ctrl</kbd>+<kbd>C</kbd>
 
 # Особенности терминальных мультиплексоров
@@ -61,7 +48,7 @@ Copyright (c) 1993-2002, 2003, 2005, 2006, 2007 Juergen Weigert, Michael Schroed
 Copyright (c) 1987 Oliver Laumann
 (...)
 ```
-Нажмите пробел или Enter, чтобы закрыть сообщение, и вам будет показана командная строка:
+Нажмите <kbd>Пробел</kbd> или <kbd>Enter</kbd>, чтобы закрыть сообщение, и вам будет показана командная строка:
 ```
 $
 ```
@@ -89,9 +76,9 @@ Set window's title to: ps
 $ screen -t yetanotherwindow
 ```
 Перемещаться между окнами можно разными способами: 
-* Используя `Ctrl`+`a-n` (перейти к следующему окну) и `Ctrl`+`a-p` (перейти к предыдущему окну). 
-* Используя `Ctrl`+`a-номер` (перейти к номеру окна). Используя `Ctrl`+`a-"`, чтобы увидеть список всех окон. 
-* Вы можете перемещаться вверх и вниз с помощью клавиш со стрелками и выбрать то, которое вы хотите, с помощью Enter:
+* Используя <kbd>`Ctrl</kbd>+<kbd>a</kbd>-<kbd>n</kbd> (перейти к следующему окну) и <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>p</kbd> (перейти к предыдущему окну). 
+* Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>номер</kbd> (перейти к номеру окна). Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>, чтобы увидеть список всех окон. 
+* Вы можете перемещаться вверх и вниз с помощью клавиш со стрелками и выбрать то, которое вы хотите, с помощью <kbd>Enter</kbd>:
 ```
 Num Name                                                Flags
 
