Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -49,7 +49,7 @@ Copyright (c) 1987 Oliver Laumann
 (...)
 ```
 Нажмите <kbd>Пробел</kbd> или <kbd>Enter</kbd>, чтобы закрыть сообщение, и вам будет показана командная строка:
-```
+```shellscript
 $
 ```
 Может показаться, что ничего не произошло, но факт в том, что `screen` уже создал и управляет своим первым сеансом и окном. Префикс команды экрана - `Ctrl`+`a`. Чтобы увидеть все окна в нижней части дисплея терминала, введите `Ctrl`+`a-w`:
