Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -39,7 +39,7 @@
 # Окна
 
 GNU Screen вызывается простым вводом `screen` в терминал. Сначала вы увидите приветственное сообщение:
-```
+```shellscript
 GNU Screen version 4.05.00 (GNU) 10-Dec-16
 
 Copyright (c) 2010 Juergen Weigert, Sadrul Habib Chowdhury
@@ -53,22 +53,22 @@ Copyright (c) 1987 Oliver Laumann
 $
 ```
 Может показаться, что ничего не произошло, но факт в том, что `screen` уже создал и управляет своим первым сеансом и окном. Префикс команды экрана - `Ctrl`+`a`. Чтобы увидеть все окна в нижней части дисплея терминала, введите `Ctrl`+`a-w`:
-```
+```shellscript
 0*$ bash
 ```
 Вот оно, наше пока единственное окно! Обратите внимание, что счет начинается с `0`. Чтобы создать другое окно, введите `Ctrl`+`a-c`. Вы увидите новую подсказку. Давайте запустим `ps` в этом новом окне:
-```
+```shellscript
 $ ps
   PID TTY          TIME CMD
   974 pts/2    00:00:00 bash
   981 pts/2    00:00:00 ps
 ```
 и снова введите `Ctrl`+`a-w`:
-```
+```shellscript
 0-$ bash  1*$ bash
 ```
 Здесь у нас есть два окна (обратите внимание на звездочку, указывающую на то, что отображается в данный момент). Однако, поскольку они были начаты с Bash, им обоим дано одно и то же имя. Поскольку мы вызвали `ps` в нашем текущем окне, давайте переименуем его с тем же именем. Для этого вам нужно набрать `Ctrl`+`a-A` и при появлении запроса написать новое имя окна (`ps`):
-```
+```shellscript
 Set window's title to: ps
 ```
 Теперь давайте создадим еще одно окно, но с самого начала дадим ему имя: `yetanotherwindow`. Это делается путем вызова `screen` с ключом `-t`:
@@ -79,7 +79,7 @@ $ screen -t yetanotherwindow
 * Используя <kbd>`Ctrl</kbd>+<kbd>a</kbd>-<kbd>n</kbd> (перейти к следующему окну) и <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>p</kbd> (перейти к предыдущему окну). 
 * Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>номер</kbd> (перейти к номеру окна). Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>, чтобы увидеть список всех окон. 
 * Вы можете перемещаться вверх и вниз с помощью клавиш со стрелками и выбрать то, которое вы хотите, с помощью <kbd>Enter</kbd>:
-```
+```shellscript
 Num Name                                                Flags
 
    0 bash                                                   $
@@ -87,7 +87,7 @@ Num Name                                                Flags
    2 yetanotherwindow
 ```
 При работе с окнами важно помнить следующее: окна запускают свои программы совершенно независимо друг от друга. Программы будут продолжать работать, даже если их окно не отображается (также, когда сеанс экрана отключен, как мы вскоре увидим). Чтобы удалить окно, просто завершите программу, работающую в нем (как только последнее окно будет удалено, `screen` завершит свою работу). Или используйте `Ctrl`+`a-k` в окне, которое вы хотите удалить; вас попросят подтвердить:
-```
+```shellscript
 Really kill this window [y/n]
 
 Window 0 (bash) killed.
@@ -97,11 +97,11 @@ Window 0 (bash) killed.
 # Области (Regions)
 
 `screen` может разделить экран терминала на несколько областей для размещения окон. Это разделение может быть горизонтальным (`Ctrl`+`a-S`) или вертикальным (`Ctrl`+`a-|`). Единственное, что будет отображаться в новом регионе, это  `--` внизу, что означает, что он пуст:
-```
+```shellscript
 1 ps                                                               --
 ```
 Чтобы перейти в новую область, введите `Ctrl`+`a-Tab`. Теперь вы можете добавить окно любым из методов, которые мы уже видели, например: `Ctrl`+`a-2`. Теперь `--` должно было превратиться в `2 yetanotherwindow`:
-```
+```shellscript
 $ ps                                                  $
   PID TTY          TIME CMD
  1020 pts/2    00:00:00 bash
@@ -122,7 +122,7 @@ $ screen -t yetanotherwindow
 # Сессии
 
 До сих пор мы играли с несколькими окнами и областями, но все они принадлежали одной и той же сессии. Пора начать играть с сессиями. Чтобы увидеть список всех сеансов, введите `screen -list` или `screen -ls`:
-```
+```shellscript
 $ screen -list
 There is a screen on:
         1037.pts-0.debian       (08/24/19 13:53:35)     (Attached)
