--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -39,7 +39,7 @@
 # Окна
 
 GNU Screen вызывается простым вводом `screen` в терминал. Сначала вы увидите приветственное сообщение:
-```shellscript
+```console
 GNU Screen version 4.05.00 (GNU) 10-Dec-16
 
 Copyright (c) 2010 Juergen Weigert, Sadrul Habib Chowdhury
@@ -49,37 +49,37 @@ Copyright (c) 1987 Oliver Laumann
 (...)
 ```
 Нажмите <kbd>Пробел</kbd> или <kbd>Enter</kbd>, чтобы закрыть сообщение, и вам будет показана командная строка:
-```shellscript
+```console
 $
 ```
 Может показаться, что ничего не произошло, но факт в том, что `screen` уже создал и управляет своим первым сеансом и окном. Префикс команды экрана - `Ctrl`+`a`. Чтобы увидеть все окна в нижней части дисплея терминала, введите `Ctrl`+`a-w`:
-```shellscript
+```console
 0*$ bash
 ```
 Вот оно, наше пока единственное окно! Обратите внимание, что счет начинается с `0`. Чтобы создать другое окно, введите `Ctrl`+`a-c`. Вы увидите новую подсказку. Давайте запустим `ps` в этом новом окне:
-```shellscript
+```console
 $ ps
   PID TTY          TIME CMD
   974 pts/2    00:00:00 bash
   981 pts/2    00:00:00 ps
 ```
 и снова введите `Ctrl`+`a-w`:
-```shellscript
+```console
 0-$ bash  1*$ bash
 ```
 Здесь у нас есть два окна (обратите внимание на звездочку, указывающую на то, что отображается в данный момент). Однако, поскольку они были начаты с Bash, им обоим дано одно и то же имя. Поскольку мы вызвали `ps` в нашем текущем окне, давайте переименуем его с тем же именем. Для этого вам нужно набрать `Ctrl`+`a-A` и при появлении запроса написать новое имя окна (`ps`):
-```shellscript
+```console
 Set window's title to: ps
 ```
 Теперь давайте создадим еще одно окно, но с самого начала дадим ему имя: `yetanotherwindow`. Это делается путем вызова `screen` с ключом `-t`:
-```
+```console
 $ screen -t yetanotherwindow
 ```
 Перемещаться между окнами можно разными способами: 
 * Используя <kbd>`Ctrl</kbd>+<kbd>a</kbd>-<kbd>n</kbd> (перейти к следующему окну) и <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>p</kbd> (перейти к предыдущему окну). 
 * Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>номер</kbd> (перейти к номеру окна). Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>, чтобы увидеть список всех окон. 
 * Вы можете перемещаться вверх и вниз с помощью клавиш со стрелками и выбрать то, которое вы хотите, с помощью <kbd>Enter</kbd>:
-```shellscript
+```console
 Num Name                                                Flags
 
    0 bash                                                   $
@@ -87,7 +87,7 @@ Num Name                                                Flags
    2 yetanotherwindow
 ```
 При работе с окнами важно помнить следующее: окна запускают свои программы совершенно независимо друг от друга. Программы будут продолжать работать, даже если их окно не отображается (также, когда сеанс экрана отключен, как мы вскоре увидим). Чтобы удалить окно, просто завершите программу, работающую в нем (как только последнее окно будет удалено, `screen` завершит свою работу). Или используйте `Ctrl`+`a-k` в окне, которое вы хотите удалить; вас попросят подтвердить:
-```shellscript
+```console
 Really kill this window [y/n]
 
 Window 0 (bash) killed.
@@ -97,11 +97,11 @@ Window 0 (bash) killed.
 # Области (Regions)
 
 `screen` может разделить экран терминала на несколько областей для размещения окон. Это разделение может быть горизонтальным (`Ctrl`+`a-S`) или вертикальным (`Ctrl`+`a-|`). Единственное, что будет отображаться в новом регионе, это  `--` внизу, что означает, что он пуст:
-```shellscript
+```console
 1 ps                                                               --
 ```
 Чтобы перейти в новую область, введите `Ctrl`+`a-Tab`. Теперь вы можете добавить окно любым из методов, которые мы уже видели, например: `Ctrl`+`a-2`. Теперь `--` должно было превратиться в `2 yetanotherwindow`:
-```shellscript
+```console
 $ ps                                                  $
   PID TTY          TIME CMD
  1020 pts/2    00:00:00 bash
@@ -122,7 +122,7 @@ $ screen -t yetanotherwindow
 # Сессии
 
 До сих пор мы играли с несколькими окнами и областями, но все они принадлежали одной и той же сессии. Пора начать играть с сессиями. Чтобы увидеть список всех сеансов, введите `screen -list` или `screen -ls`:
-```shellscript
+```console
 $ screen -list
 There is a screen on:
         1037.pts-0.debian       (08/24/19 13:53:35)     (Attached)
@@ -149,11 +149,11 @@ There are screens on:
 2 Sockets in /run/screen/S-carol.
 ```
 Чтобы завершить сеанс, закройте все его окна или просто введите команду `screen -S SESSION-PID -X quit` (вместо этого вы также можете указать имя сеанса). Избавимся от нашей первой сессии:
-```
+```console
 $ screen -S 1037 -X quit
 ```
 Вы будете отправлены обратно в окно терминала за пределами экрана. Но помните, что наша вторая сессия все еще жива:
-```
+```console
 $ screen -ls
 There is a screen on:
 	1090.second session	(08/24/19 14:38:35)	(Detached)
@@ -169,16 +169,16 @@ There is a screen on:
 * Чтобы поделиться сессией с другими пользователями. 
 
 Вы можете отключить сесию с помощью комбинации клавиш `Ctrl`+`a-d`. При этом вы вернетесь в свой терминал:
-```
+```console
 [detached from 1090.second session]
 $
 ```
 Чтобы снова подключиться к сессии, используйте команду `screen -r SESSION-PID`. В качестве альтернативы вы можете использовать параметр `SESSION-NAME`, как мы видели выше. Если существует только одна сессия, то ни один из параметров не является обязательным:
-```
+```console
 $ screen -r
 ```
 Этой команды достаточно, чтобы повторно подключиться к нашей сессии повторно:
-```
+```console
 $ screen -ls
 There is a screen on:
         1090.second session      (08/24/19 14:38:35)     (Attached)
