Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -47,22 +47,22 @@ Copyright (c) 1987 Oliver Laumann
 ```console
 $
 ```
-Может показаться, что ничего не произошло, но факт в том, что `screen` уже создал и управляет своим первым сеансом и окном. Префикс команды экрана - `Ctrl`+`a`. Чтобы увидеть все окна в нижней части дисплея терминала, введите `Ctrl`+`a-w`:
+Может показаться, что ничего не произошло, но факт в том, что `screen` уже создал и управляет своим первым сеансом и окном. Префикс команды экрана - <kbd>Ctrl</kbd>+<kbd>a</kbd>. Чтобы увидеть все окна в нижней части дисплея терминала, введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>:
 ```console
 0*$ bash
 ```
-Вот оно, наше пока единственное окно! Обратите внимание, что счет начинается с `0`. Чтобы создать другое окно, введите `Ctrl`+`a-c`. Вы увидите новую подсказку. Давайте запустим `ps` в этом новом окне:
+Вот оно, наше пока единственное окно! Обратите внимание, что счет начинается с `0`. Чтобы создать другое окно, введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>c</kbd>. Вы увидите новую подсказку. Давайте запустим `ps` в этом новом окне:
 ```console
 $ ps
   PID TTY          TIME CMD
   974 pts/2    00:00:00 bash
   981 pts/2    00:00:00 ps
 ```
-и снова введите `Ctrl`+`a-w`:
+и снова введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>:
 ```console
 0-$ bash  1*$ bash
 ```
-Здесь у нас есть два окна (обратите внимание на звездочку, указывающую на то, что отображается в данный момент). Однако, поскольку они были начаты с Bash, им обоим дано одно и то же имя. Поскольку мы вызвали `ps` в нашем текущем окне, давайте переименуем его с тем же именем. Для этого вам нужно набрать `Ctrl`+`a-A` и при появлении запроса написать новое имя окна (`ps`):
+Здесь у нас есть два окна (обратите внимание на звездочку, указывающую на то, что отображается в данный момент). Однако, поскольку они были начаты с Bash, им обоим дано одно и то же имя. Поскольку мы вызвали `ps` в нашем текущем окне, давайте переименуем его с тем же именем. Для этого вам нужно набрать <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd> и при появлении запроса написать новое имя окна (`ps`):
 ```console
 Set window's title to: ps
 ```
@@ -81,7 +81,7 @@ Num Name                                                Flags
    1 ps                                                     $
    2 yetanotherwindow
 ```
-При работе с окнами важно помнить следующее: окна запускают свои программы совершенно независимо друг от друга. Программы будут продолжать работать, даже если их окно не отображается (также, когда сеанс экрана отключен, как мы вскоре увидим). Чтобы удалить окно, просто завершите программу, работающую в нем (как только последнее окно будет удалено, `screen` завершит свою работу). Или используйте `Ctrl`+`a-k` в окне, которое вы хотите удалить; вас попросят подтвердить:
+При работе с окнами важно помнить следующее: окна запускают свои программы совершенно независимо друг от друга. Программы будут продолжать работать, даже если их окно не отображается (также, когда сеанс экрана отключен, как мы вскоре увидим). Чтобы удалить окно, просто завершите программу, работающую в нем (как только последнее окно будет удалено, `screen` завершит свою работу). Или используйте <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>k</kbd> в окне, которое вы хотите удалить; вас попросят подтвердить:
 ```console
 Really kill this window [y/n]
 
@@ -91,11 +91,11 @@ Window 0 (bash) killed.
 
 # Области (Regions)
 
-`screen` может разделить экран терминала на несколько областей для размещения окон. Это разделение может быть горизонтальным (`Ctrl`+`a-S`) или вертикальным (`Ctrl`+`a-|`). Единственное, что будет отображаться в новом регионе, это  `--` внизу, что означает, что он пуст:
+`screen` может разделить экран терминала на несколько областей для размещения окон. Это разделение может быть горизонтальным (<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>S</kbd>) или вертикальным (<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>|</kbd>). Единственное, что будет отображаться в новом регионе, это  `--` внизу, что означает, что он пуст:
 ```console
 1 ps                                                               --
 ```
-Чтобы перейти в новую область, введите `Ctrl`+`a-Tab`. Теперь вы можете добавить окно любым из методов, которые мы уже видели, например: `Ctrl`+`a-2`. Теперь `--` должно было превратиться в `2 yetanotherwindow`:
+Чтобы перейти в новую область, введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Tab</kbd>. Теперь вы можете добавить окно любым из методов, которые мы уже видели, например: <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>2</kbd>. Теперь `--` должно было превратиться в `2 yetanotherwindow`:
 ```console
 $ ps                                                  $
   PID TTY          TIME CMD
@@ -109,8 +109,8 @@ $ screen -t yetanotherwindow
    1 ps                                                                2 yetanotherwindow
 ```
 При работе с областями следует учитывать следующие важные аспекты: 
-* Вы перемещаетесь между областями, нажимая `Ctrl`+`a-Tab`. 
-* Вы можете завершить все области, кроме текущего, с помощью `Ctrl`+`a-Q`. Вы можете завершить текущую область с помощью `Ctrl`+`a-X`. 
+* Вы перемещаетесь между областями, нажимая <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Tab</kbd>. 
+* Вы можете завершить все области, кроме текущего, с помощью <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Q</kbd>. Вы можете завершить текущую область с помощью <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>X</kbd>. 
 * Завершение области не завершает связанное с ней окно.
 
 
@@ -163,7 +163,7 @@ There is a screen on:
 * Чтобы позволить вашему компьютеру на работе делать свои дела и подключаться удаленно позже из дома. 
 * Чтобы поделиться сессией с другими пользователями. 
 
-Вы можете отключить сесию с помощью комбинации клавиш `Ctrl`+`a-d`. При этом вы вернетесь в свой терминал:
+Вы можете отключить сесию с помощью комбинации клавиш <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>d</kbd>. При этом вы вернетесь в свой терминал:
 ```console
 [detached from 1090.second session]
 $
