Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -71,7 +71,7 @@ Set window's title to: ps
 $ screen -t yetanotherwindow
 ```
 Перемещаться между окнами можно разными способами: 
-* Используя <kbd>`Ctrl</kbd>+<kbd>a</kbd>-<kbd>n</kbd> (перейти к следующему окну) и <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>p</kbd> (перейти к предыдущему окну). 
+* Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>n</kbd> (перейти к следующему окну) и <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>p</kbd> (перейти к предыдущему окну). 
 * Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>номер</kbd> (перейти к номеру окна). Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>, чтобы увидеть список всех окон. 
 * Вы можете перемещаться вверх и вниз с помощью клавиш со стрелками и выбрать то, которое вы хотите, с помощью <kbd>Enter</kbd>:
 ```console
@@ -202,10 +202,10 @@ There is a screen on:
 ## Копирование и вставка: режим прокрутки
 
 *Screen GNU* имеет режим копирования или прокрутки. После ввхода вы можете перемещать курсор в текущем окне или по содержимому его истории с помощью клавиш со стрелками. Вы можете помечать и копировать текст в окнах. Для этого следует: 
-* Войти в режим копирования/прокрутки: `Ctrl`+`a- [`. 
-* Переместиться в начало фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте начало фрагмента текста, который вы хотите скопировать: `Пробел`. 
-* Переместиться в конец фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте конец фрагмента текста, который вы хотите скопировать: `Пробел`.
-* Перейти в выбранное вами окно и вставить фрагмент текста: `Ctrl`+`a-]`.
+* Войти в режим копирования/прокрутки: <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>[</kbd>. 
+* Переместиться в начало фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте начало фрагмента текста, который вы хотите скопировать: <kbd>Пробел</kbd>. 
+* Переместиться в конец фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте конец фрагмента текста, который вы хотите скопировать: <kbd>Пробел</kbd>.
+* Перейти в выбранное вами окно и вставить фрагмент текста: <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>]</kbd>.
 
 ## Настройка экрана
 
@@ -214,11 +214,11 @@ There is a screen on:
 * `SCREEN SETTINGS`  
 Вы можете определить общие настройки, указав директиву, за которой следует пробел и значение, как в: `defscrollback 1024`. 
 * `SCREEN KEYBINDINGS`  
-Этот раздел весьма интересен, поскольку позволяет вам переопределить сочетания клавиш, которые могут мешать повседневному использованию терминала. Используйте ключевое слово `bind`, за которым следует пробел, символ, который следует использовать после префикса команды, еще один пробел и команду, например: `bind l kill` (этот параметр изменит способ закрытия окна по умолчанию на `Ctrl`+`a-l`). 
+Этот раздел весьма интересен, поскольку позволяет вам переопределить сочетания клавиш, которые могут мешать повседневному использованию терминала. Используйте ключевое слово `bind`, за которым следует пробел, символ, который следует использовать после префикса команды, еще один пробел и команду, например: `bind l kill` (этот параметр изменит способ закрытия окна по умолчанию на <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>l</kbd>). 
 
-Чтобы отобразить все привязки экрана, введите `Ctrl`+`a-?` или обратитесь к странице руководства. 
+Чтобы отобразить все привязки экрана, введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>?</kbd> или обратитесь к странице руководства. 
 
->Конечно, вы также можете изменить сам префикс команды. Например, чтобы перейти от `Ctrl`+`a` к `Ctrl`+`b`, просто добавьте эту строку: `escape ^ Bb`.
+>Конечно, вы также можете изменить сам префикс команды. Например, чтобы перейти от <kbd>Ctrl</kbd>+<kbd>a</kbd> к <kbd>Ctrl</kbd>+<kbd>b</kbd>, просто добавьте эту строку: `escape ^ Bb`.
  
 * `TERMINAL SETTINGS`  
 Этот раздел включает в себя настройки, связанные, среди прочего, с размерами окон терминала и буферами. Например, чтобы включить неблокирующий режим, чтобы лучше справляться с нестабильными ssh-соединениями, используется следующая конфигурация: `defnonblock 5`. 
@@ -257,7 +257,7 @@ $ tmux new -s "LPI" -n "Window zero"
 ```
 [LPI] 0:Window zero*                                                 "debian" 19:01 27-Aug-19
 ```
-Префикс команды `tmux` - `Ctrl`+`b`. Чтобы создать новое окно, просто введите `Ctrl`+`b-c`; вы перейдете к новому запросу, и в строке состояния отобразится новое окно:
+Префикс команды `tmux` - <kbd>Ctrl</kbd>+<kbd>b</kbd>. Чтобы создать новое окно, просто введите <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>c</kbd>; вы перейдете к новому запросу, и в строке состояния отобразится новое окно:
 ```
 [LPI] 0:Window zero- 1:bash*                                         "debian" 19:02 27-Aug-19
 ```
@@ -265,7 +265,7 @@ $ tmux new -s "LPI" -n "Window zero"
 ```
 [LPI] 0:Window zero- 1:top*                                         "debian" 19:03 27-Aug-19
 ```
-В любом случае вы можете переименовать окно с помощью `Ctrl`+`b`-`,`. При появлении запроса введите новое имя и нажмите `Enter`:
+В любом случае вы можете переименовать окно с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>,</kbd>. При появлении запроса введите новое имя и нажмите `Enter`:
 ```
 (rename-window) Window one
 ```
