Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -265,30 +265,30 @@ $ tmux new -s "LPI" -n "Window zero"
 ```
 [LPI] 0:Window zero- 1:top*                                         "debian" 19:03 27-Aug-19
 ```
-В любом случае вы можете переименовать окно с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>,</kbd>. При появлении запроса введите новое имя и нажмите `Enter`:
+В любом случае вы можете переименовать окно с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>,</kbd>. При появлении запроса введите новое имя и нажмите <kbd>Enter</kbd>:
 ```
 (rename-window) Window one
 ```
-Вы можете отобразить все окна для выбора с помощью `Ctrl`+`b`-`w` (используйте клавиши со стрелками для перемещения вверх и вниз и введите для выбора):
+Вы можете отобразить все окна для выбора с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>w</kbd> (используйте клавиши со стрелками для перемещения вверх и вниз и введите для выбора):
 ```
 (0)  0: Window zero- "debian"
 (1)  1: Window one* "debian"
 ```
-Подобно экрану, мы можем переходить из одного окна в другое с помощью: `Ctrl`+`b`-`n` перейти к следующему окну. `Ctrl`+`b`-`p` перейти к предыдущему окну. `Ctrl`+`b`-`число` перейти к номеру окна. Чтобы избавиться от окна, используйте `Ctrl`+`b`-`&`. Вам будет предложено подтвердить:
+Подобно экрану, мы можем переходить из одного окна в другое с помощью: <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>n</kbd> перейти к следующему окну. <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>p</kbd> перейти к предыдущему окну. <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>число</kbd> перейти к номеру окна. Чтобы избавиться от окна, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>&</kbd>. Вам будет предложено подтвердить:
 ```
 kill-window Window one? (y/n)
 ```
 К другим интересным оконным командам относятся:
-* `Ctrl`+`b`-`f`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>f</kbd>  
 найти окно по имени. 
-* `Ctrl`+`b`-`.`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>.</kbd>  
 изменить порядковый номер окна. 
 
 Чтобы прочитать весь список команд, обратитесь к странице руководства.
 
 ## Панели
 
-Средство разделения экрана `screen` также присутствует в `tmux`. Однако полученные подразделения не называются областями, а панелями. Наиболее важное различие между областями и панелями состоит в том, что последние представляют собой полные псевдотерминалы, связанные с окном. Это означает, что уничтожение панели также приведет к уничтожению ее псевдотерминала и всех связанных с ним программ, работающих внутри. Чтобы разделить окно по горизонтали, мы используем `Ctrl`+`b`-`"`:
+Средство разделения экрана `screen` также присутствует в `tmux`. Однако полученные подразделения не называются областями, а панелями. Наиболее важное различие между областями и панелями состоит в том, что последние представляют собой полные псевдотерминалы, связанные с окном. Это означает, что уничтожение панели также приведет к уничтожению ее псевдотерминала и всех связанных с ним программ, работающих внутри. Чтобы разделить окно по горизонтали, мы используем <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>"</kbd>:
 ```
 Tasks:  93 total,   1 running,  92 sleeping,   0 stopped,   0 zombie
 %Cpu(s):  0.0 us,  0.0 sy,  0.0 ni,100.0 id,  0.0 wa,  0.0 hi,  0.0 si,  0.0 st
@@ -325,7 +325,7 @@ $
 
 [LPI] 0:Window zero- 1:Window one*                                      "debian" 19:05 27-Aug-19
 ```
-Чтобы разделить его по вертикали, используйте `Ctrl`+`b`-`%`:
+Чтобы разделить его по вертикали, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>%</kbd>:
 ```
                                                                             │$
     1 root      20   0  139088   6988   5264 S  0.0  0.2   0:00.50 systemd     │
@@ -365,28 +365,28 @@ $
 
 [LPI] 0:Window zero- 1:Window one*                                      "debian" 19:05 27-Aug-19
 ```
-Чтобы уничтожить текущую панель (вместе с псевдотерминалом, работающим в ней, вместе со всеми связанными программами), используйте `Ctrl`+`b`-`x`. Вам будет предложено подтвердить в строке состояния:
+Чтобы уничтожить текущую панель (вместе с псевдотерминалом, работающим в ней, вместе со всеми связанными программами), используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>x</kbd>. Вам будет предложено подтвердить в строке состояния:
 ```
 kill-pane 1? (y/n)
 ```
 Важные команды панели: 
-* `Ctrl`+`b`-`↑`, `↓`, `←`, `→`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>↑</kbd>, <kbd>↓</kbd>, <kbd>←</kbd>, <kbd>→</kbd>  
 перемещаться между панелями. 
-* `Ctrl`+`b`-`;`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>;</kbd>  
 перейти к последней активной панели. 
-* `Ctrl`+`b`-`Ctrl`+`arrow key`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>Ctrl</kbd>+<kbd>arrow key</kbd>  
 изменить размер панели на одну строку. 
-* `Ctrl`+`b`-`Alt`+`arrow key`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>Alt</kbd>+<kbd>arrow key</kbd>  
 изменить размер панели на пять строк. 
-* `Ctrl`+`b`-`{`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>{</kbd>  
 поменять местами панели (текущие на предыдущие). 
-* `Ctrl`+`b`-`}`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>}</kbd>  
 поменять местами панели (с текущей на следующую). 
-* `Ctrl`+`b`-`z`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>z</kbd>  
 увеличить/уменьшить панель.
-* `Ctrl`+`b`-`t`  
-`tmux` отображает на панели причудливые часы (убейте их, нажав `q`). 
-* `Ctrl`+`b`-`!`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>t</kbd>  
+`tmux` отображает на панели причудливые часы (убейте их, нажав <kbd>q</kbd>). 
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>!</kbd>  
 превратить панель в окно. 
 
 Чтобы прочитать весь список команд, обратитесь к странице руководства.
@@ -394,7 +394,7 @@ kill-pane 1? (y/n)
 
 # Сессии
 
-Чтобы просмотреть сеансы в tmux, вы можете использовать `Ctrl`+`b`-`s`:
+Чтобы просмотреть сеансы в tmux, вы можете использовать <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd>:
 ```
 (0) + LPI: 2 windows (attached)
 ```
@@ -403,15 +403,15 @@ kill-pane 1? (y/n)
 $ tmux ls
 LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39] (attached)
 ```
-Есть только один сеанс (LPI), который включает в себя два окна. Давайте создадим новый сеанс из нашего текущего сеанса. Этого можно добиться, нажав `Ctrl`+`b`, введите в командной строке `:new` и нажмите `Enter`. Вы будете отправлены в новый сеанс, что можно увидеть в строке состояния:
+Есть только один сеанс (LPI), который включает в себя два окна. Давайте создадим новый сеанс из нашего текущего сеанса. Этого можно добиться, нажав <kbd>Ctrl</kbd>+<kbd>b</kbd>, введите в командной строке `:new` и нажмите <kbd>Enter</kbd>. Вы будете отправлены в новый сеанс, что можно увидеть в строке состояния:
 ```
 [2] 0:bash*                                                       "debian" 19:15 27-Aug-19
 ```
-По умолчанию tmux назвал сеанс `2`. Чтобы переименовать его, используйте `Ctrl`+`b`-`$`. При появлении запроса введите новое имя и нажмите `Enter`:
+По умолчанию tmux назвал сеанс `2`. Чтобы переименовать его, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>$</kbd>. При появлении запроса введите новое имя и нажмите <kbd>Enter</kbd>:
 ```
 (rename-session) Second Session
 ```
-Вы можете переключать сеансы с помощью `Ctrl`+`b`-`s` (используйте клавиши со стрелками и `enter`):
+Вы можете переключать сеансы с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd> (используйте клавиши со стрелками и <kbd>enter</kbd>):
 ```
 (0) + LPI: 2 windows
 (1) + Second Session: 1 windows (attached)
@@ -434,7 +434,7 @@ LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39]
 ```
 $ tmux a
 ```
-Теперь вы вернулись к сеансу; чтобы оторваться от него, нажмите `Ctrl`+`b`-`d`:
+Теперь вы вернулись к сеансу; чтобы оторваться от него, нажмите <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>d</kbd>:
 ```
 [detached (from session LPI)]
 $
@@ -442,9 +442,9 @@ $
 >Один и тот же сеанс можно подключить к нескольким терминалам. Если вы хотите присоединить сеанс, убедившись, что он сначала отсоединен от любых других терминалов, используйте ключ `-d`: `tmux attach -d -t SESSION-NAME`.
 
 Важные команды для присоединения/отсоединения сеанса:
-* `Ctrl`+`b`-`D`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>D</kbd>  
 выберите, какого клиента отсоединить. 
-* `Ctrl`+`b`-`r`  
+* <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>r</kbd>  
 обновите клиентский терминал. 
 
 Чтобы прочитать весь список команд, обратитесь к странице руководства.
@@ -452,7 +452,7 @@ $
 
 ## Копирование и вставка: режим прокрутки
 
-`tmux` также имеет режим копирования в основном так же, как `screen` (не забудьте использовать префикс команды `tmux`, а не `screen`!). Единственное отличие в командном отношении состоит в том, что вы используете `Ctrl`+`Пробел`, чтобы отметить начало выделения, и `Alt`+`w`, чтобы скопировать выделенный текст.
+`tmux` также имеет режим копирования в основном так же, как `screen` (не забудьте использовать префикс команды `tmux`, а не `screen`!). Единственное отличие в командном отношении состоит в том, что вы используете <kbd>Ctrl</kbd>+<kbd>Пробел</kbd>, чтобы отметить начало выделения, и <kbd>Alt</kbd>+<kbd>w</kbd>, чтобы скопировать выделенный текст.
 
 ## Настройка `tmux`
 
@@ -472,7 +472,7 @@ bind F2 selectw -t:11
 bind F3 selectw -t:12
 ```
 
-Чтобы получить полный список всех привязок, введите `Ctrl`+`b`-`?` (нажмите `q` для выхода) или обратитесь к странице руководства.
+Чтобы получить полный список всех привязок, введите <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>?</kbd> (нажмите <kbd>q</kbd> для выхода) или обратитесь к странице руководства.
 
 # Упражнения для закрепления
 
@@ -480,7 +480,7 @@ bind F3 selectw -t:12
 
 | Функция/Оператор              | GNU Screen  | tmux          |
 |:------------------------------|-------------|---------------|
-| Префикс команды по умолчанию `Ctrl`+`a`  |
+| Префикс команды по умолчанию <kbd>Ctrl</kbd>+<kbd>a</kbd>  |
 | Модель клиент-сервер          |           
 | Панели это псевдотерминалы    |        
 | Завершение области не уничтожает связанные с ней окна  |
