Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -250,32 +250,32 @@ There is a screen on:
 `bash *`. По умолчанию это имя программы, запущенной внутри окна, и, в отличие от `screen`, `tmux` автоматически обновит его, чтобы отразить текущую запущенную программу. Обратите внимание на звездочку, указывающую, что это текущее видимое окно. 
 
 Вы можете назначить имена сеансу и окну при вызове `tmux`:
-```
+```console
 $ tmux new -s "LPI" -n "Window zero"
 ```
 Строка состояния изменится соответственно:
-```
+```console
 [LPI] 0:Window zero*                                                 "debian" 19:01 27-Aug-19
 ```
 Префикс команды `tmux` - <kbd>Ctrl</kbd>+<kbd>b</kbd>. Чтобы создать новое окно, просто введите <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>c</kbd>; вы перейдете к новому запросу, и в строке состояния отобразится новое окно:
-```
+```console
 [LPI] 0:Window zero- 1:bash*                                         "debian" 19:02 27-Aug-19
 ```
 Поскольку Bash является базовой оболочкой, новому окну по умолчанию дается это имя. Начните сверху и посмотрите, как имя меняется на `top`:
-```
+```console
 [LPI] 0:Window zero- 1:top*                                         "debian" 19:03 27-Aug-19
 ```
 В любом случае вы можете переименовать окно с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>,</kbd>. При появлении запроса введите новое имя и нажмите <kbd>Enter</kbd>:
-```
+```console
 (rename-window) Window one
 ```
 Вы можете отобразить все окна для выбора с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>w</kbd> (используйте клавиши со стрелками для перемещения вверх и вниз и введите для выбора):
-```
+```console
 (0)  0: Window zero- "debian"
 (1)  1: Window one* "debian"
 ```
 Подобно экрану, мы можем переходить из одного окна в другое с помощью: <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>n</kbd> перейти к следующему окну. <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>p</kbd> перейти к предыдущему окну. <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>число</kbd> перейти к номеру окна. Чтобы избавиться от окна, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>&</kbd>. Вам будет предложено подтвердить:
-```
+```console
 kill-window Window one? (y/n)
 ```
 К другим интересным оконным командам относятся:
@@ -289,7 +289,7 @@ kill-window Window one? (y/n)
 ## Панели
 
 Средство разделения экрана `screen` также присутствует в `tmux`. Однако полученные подразделения не называются областями, а панелями. Наиболее важное различие между областями и панелями состоит в том, что последние представляют собой полные псевдотерминалы, связанные с окном. Это означает, что уничтожение панели также приведет к уничтожению ее псевдотерминала и всех связанных с ним программ, работающих внутри. Чтобы разделить окно по горизонтали, мы используем <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>"</kbd>:
-```
+```console
 Tasks:  93 total,   1 running,  92 sleeping,   0 stopped,   0 zombie
 %Cpu(s):  0.0 us,  0.0 sy,  0.0 ni,100.0 id,  0.0 wa,  0.0 hi,  0.0 si,  0.0 st
 KiB Mem :  4050960 total,  3730920 free,   114880 used,   205160 buff/cache
@@ -326,7 +326,7 @@ $
 [LPI] 0:Window zero- 1:Window one*                                      "debian" 19:05 27-Aug-19
 ```
 Чтобы разделить его по вертикали, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>%</kbd>:
-```
+```console
                                                                             │$
     1 root      20   0  139088   6988   5264 S  0.0  0.2   0:00.50 systemd     │
                                                                                │
@@ -366,7 +366,7 @@ $
 [LPI] 0:Window zero- 1:Window one*                                      "debian" 19:05 27-Aug-19
 ```
 Чтобы уничтожить текущую панель (вместе с псевдотерминалом, работающим в ней, вместе со всеми связанными программами), используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>x</kbd>. Вам будет предложено подтвердить в строке состояния:
-```
+```consoleconsole
 kill-pane 1? (y/n)
 ```
 Важные команды панели: 
@@ -395,29 +395,29 @@ kill-pane 1? (y/n)
 # Сессии
 
 Чтобы просмотреть сеансы в tmux, вы можете использовать <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd>:
-```
+```console
 (0) + LPI: 2 windows (attached)
 ```
 В качестве альтернативы вы можете использовать команду `tmux ls`:
-```
+```console
 $ tmux ls
 LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39] (attached)
 ```
 Есть только один сеанс (LPI), который включает в себя два окна. Давайте создадим новый сеанс из нашего текущего сеанса. Этого можно добиться, нажав <kbd>Ctrl</kbd>+<kbd>b</kbd>, введите в командной строке `:new` и нажмите <kbd>Enter</kbd>. Вы будете отправлены в новый сеанс, что можно увидеть в строке состояния:
-```
+```console
 [2] 0:bash*                                                       "debian" 19:15 27-Aug-19
 ```
 По умолчанию tmux назвал сеанс `2`. Чтобы переименовать его, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>$</kbd>. При появлении запроса введите новое имя и нажмите <kbd>Enter</kbd>:
-```
+```console
 (rename-session) Second Session
 ```
 Вы можете переключать сеансы с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd> (используйте клавиши со стрелками и <kbd>enter</kbd>):
-```
+```console
 (0) + LPI: 2 windows
 (1) + Second Session: 1 windows (attached)
 ```
 Чтобы убить сеанс, вы можете использовать команду `tmux kill-session -t SESSION-NAME`. Если вы введете команду в текущем подключенном сеансе, вы выйдете из `tmux` и вернетесь к исходному сеансу терминала:
-```
+```console
 $ tmux kill-session -t "Second Session"
 [exited]
 $
@@ -426,16 +426,16 @@ $
 ## Отключенный сеанс
 
 Завершив вторую сессию, мы оказались вне `tmux`. Однако у нас все еще есть активная сессия. Спросите у `tmux` список сессий, и вы обязательно найдете его там:
-```
+```console
 $ tmux ls
 LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39]
 ```
 Однако этот сеанс отключен от своего терминала. Мы можем прикрепить его с помощью `tmux attach -t SESSION-NAME` (attach можно заменить на at или - просто - a). Когда есть только один сеанс, указание имени необязательно:
-```
+```console
 $ tmux a
 ```
 Теперь вы вернулись к сеансу; чтобы оторваться от него, нажмите <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>d</kbd>:
-```
+```console
 [detached (from session LPI)]
 $
 ```
@@ -458,14 +458,14 @@ $
 
 Файлы конфигурации для `tmux` обычно находятся в `/etc/tmux.conf` и `~/.tmux.conf`. При запуске `tmux` создает эти файлы, если они существуют. Также существует возможность запуска `tmux` с ключом `-f` для предоставления альтернативного файла конфигурации. Вы можете найти пример файла конфигурации `tmux`, расположенный в `/usr/share/doc/tmux/example_tmux.conf`. Уровень настройки, которого вы можете достичь, действительно высок. Вот некоторые из вещей, которые вы можете сделать:
 * Измените префиксный ключ
-```
+```console
 # Change the prefix key to C-a
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 ```
 * Установите дополнительные привязки клавиш для окон выше 9
-```
+```console
 # Some extra key bindings to select higher numbered windows
 bind F1 selectw -t:10
 bind F2 selectw -t:11
